Added documentation for the abort call.

--- a/documentation/_templates/custindex.html
+++ b/documentation/_templates/custindex.html
@@ -10,7 +10,8 @@
     </td><td width="50%">
       <p class="biglink"><a class="biglink" href="{{ pathto("api") }}">API documentation</a><br/>
          <span class="linkdescr">keep this under your pillow</span></p>
-		 <br> <br> <br> <br>
+      <p class="biglink"><a class="biglink" href="{{ pathto("utils") }}">Utilities</a><br/>
+         <span class="linkdescr">useful scripts to interact with a running pupyMPI instance.</span></p>
     </td></tr>
   </table>
 
