Documentation changes from before the vacation

--- a/documentation/_templates/custindex.html
+++ b/documentation/_templates/custindex.html
@@ -7,6 +7,8 @@
          <span class="linkdescr">start here</span></p>
       <p class="biglink"><a class="biglink" href="{{ pathto("mpirun") }}">Running your pupyMPI program</a><br/>
          <span class="linkdescr">Describes the command line interface for startign prorams</span></p>
+      <p class="biglink"><a class="biglink" href="{{ pathto("developer") }}">Developer section</a><br/>
+         <span class="linkdescr">Description of the inner workings for pypyMPI</span></p>
     </td><td width="50%">
       <p class="biglink"><a class="biglink" href="{{ pathto("api") }}">API documentation</a><br/>
          <span class="linkdescr">keep this under your pillow</span></p>
