Documentation for our new benchmarking API

--- a/documentation/_templates/custindex.html
+++ b/documentation/_templates/custindex.html
@@ -10,7 +10,11 @@ Look around or use the quick search if you are looking for something specific.</
     </td><td width="25%">
       <p class="biglink"><a href="{{ pathto("mpirun") }}"><span style="font-size: 1.3em; text-align:left">Running your pupyMPI<br>program</span></a><br/>
          <span class="linkdescr">explore command line switches and advanced stuff</span></p>
-    </td>
+    </td><td width="25%">
+	<p class="biglink"><a href="{{ pathto("benchmarking") }}">
+			<span style="font-size: 1.3em; text-align:left">Benchmarking</span></a><br/>
+         <span class="linkdescr">Benchmark and plot your pupyMPI runs.</span></p>
+	</td>
     </tr><tr>
     <td width="25%">
       <p class="biglink"><a class="biglink" href="{{ pathto("api") }}">API documentation</a><br/>
